--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -6,8 +6,8 @@
     <style>
       body {margin: 0; padding: 0;}
       header {height: 70px; width: 100%; background-color: #FF0000;}
-      footer {height: 60px; width: 100%; background-color: #00FF00; position: fixed; bottom: 0}
-      p {text-align: center}
+      footer {height: 60px; width: 100%; background-color: #00FF00; position: fixed; bottom: 0;}
+      p {text-align: center;}
     </style>
   </head>
   <body>
