--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -8,7 +8,7 @@
         <header style="height: 70px; width: 100%; background-color: #FF0000;">
         </header>
         <footer style="height: 60px; width: 100%; background-color: #00FF00; position: fixed; bottom: 0; text-align: center; line-height: 30px;">
-            <p>Holberton School</p>
+            <p>Best School</p>
         </footer>
     </body>
 </html>
